--- a/gestor/templates/consultas/actualizar_consulta.html
+++ b/gestor/templates/consultas/actualizar_consulta.html
@@ -30,7 +30,7 @@
                         <!-- Botones -->
                         <div class="d-flex justify-content-between mt-4">
                             <button type="submit" class="btn btn-primary">Guardar cambios</button>
-                            <a href="javascript:history.back()" class="btn btn-secondary">Cancelar</a>
+                            <a href="/consultas/" class="btn btn-secondary">Cancelar</a>
                         </div>
                     </form>
                 </div>
