--- a/gestor/templates/pacientes/crear_paciente.html
+++ b/gestor/templates/pacientes/crear_paciente.html
@@ -13,7 +13,7 @@
     <div class="row justify-content-center">
         <div class="col-lg-8 col-md-10">
             <div class="text-center mb-4">
-                <h2 class="fw-bold">Agregar Paciente</h2>
+                <h2 class="fw-bold">Nuevo Paciente</h2>
                 <p class="text-muted">Complete la información del paciente</p>
             </div>
 
