--- a/gestor/templates/base.html
+++ b/gestor/templates/base.html
@@ -5,26 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>System {% block title %}  {% endblock title %} </title>
-    <!-- Boostrap 5.3 CSS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    
-    <!--SWEET ALERT -->
+    <title>System {% block title %}{% endblock title %}</title>
+
+    <!-- Bootstrap 5.3 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <!-- SweetAlert -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-    <!--Archivos estaticos CSS y JavaScript-->
-    <link rel="stylesheet" href="/static/style.css" >
-    <script src="//code.jquery.com/jquery.min.js"></script>
-    
- 
+   <!--Archivos estaticos CSS y JavaScript-->
+   <link rel="stylesheet" href="/static/style.css" >
+   <script src="//code.jquery.com/jquery.min.js"></script>
+
     <!-- Boxicons CSS -->
-    <link
-      href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
   </head>
   <body>
     <nav>
@@ -51,7 +48,6 @@
                 <span class="link">Pacientes</span>
               </a>
             </li>
-            
             <li class="list">
               <a href="/consultas/" class="nav-link">
                 <i class="bx bx-folder-open icon"></i>
@@ -60,8 +56,8 @@
             </li>
             <li class="list">
               <a href="/estadisticas/" class="nav-link">
-                <i class='bx bx-data icon' ></i>
-                <span class="link">Estadisticas</span>
+                <i class='bx bx-data icon'></i>
+                <span class="link">Estadísticas</span>
               </a>
             </li>
             <li class="list">
@@ -75,7 +71,7 @@
             <li class="list">
               <a href="#" class="nav-link">
                 <i class='bx bx-user icon'></i>
-                <span class="nav-label">@{{user.username}}</span>
+                <span class="nav-label">@{{ user.username }}</span>
               </a>
             </li>
             <li class="list">
@@ -88,35 +84,57 @@
         </div>
       </div>
     </nav>
+
     <section class="overlay"></section>
+
     <div class="content">
       <div class="container">
-          <div class="row">
-                {% block content %}
-                
-                {% endblock content %}
-          </div>
-     </div>
-  </div>
-  </body>
+        <div class="row">
+          {% block content %}
+          {% endblock content %}
+        </div>
+      </div>
+    </div>
+    
+    <!-- JS estáticos -->
+    <script src="{% static 'script.js' %}"></script>
 
-  <script src="{% static 'script.js' %}"></script>
-<!-- SCRIPT PARA APACHE ECHARTS-->
+    <!-- ECharts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.6.0/echarts.min.js"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.6.0/echarts.min.js"></script>
+    <!-- Menú lateral + Resize de gráficos -->
+    <script>
+      const navBar = document.querySelector("nav"),
+        menuBtns = document.querySelectorAll(".menu-icon"),
+        overlay = document.querySelector(".overlay");
 
-  <!-- SCRIPT PARA MENU LATERAL-->
-  <script>
-    const navBar = document.querySelector("nav"),
-       menuBtns = document.querySelectorAll(".menu-icon"),
-       overlay = document.querySelector(".overlay");
-     menuBtns.forEach((menuBtn) => {
-       menuBtn.addEventListener("click", () => {
-         navBar.classList.toggle("open");
-       });
-     });
-     overlay.addEventListener("click", () => {
-       navBar.classList.remove("open");
-     });
-  </script>
+      menuBtns.forEach((menuBtn) => {
+        menuBtn.addEventListener("click", () => {
+          navBar.classList.toggle("open");
+
+          // Redimensionar ECharts después del cambio
+          setTimeout(() => {
+            const chartContainers = document.querySelectorAll(".echart-container");
+            chartContainers.forEach(container => {
+              const chart = echarts.getInstanceByDom(container);
+              if (chart) chart.resize();
+            });
+          }, 400); // Esperamos a que termine la animación
+        });
+      });
+
+      overlay.addEventListener("click", () => {
+        navBar.classList.remove("open");
+
+        setTimeout(() => {
+          const chartContainers = document.querySelectorAll(".echart-container");
+          chartContainers.forEach(container => {
+            const chart = echarts.getInstanceByDom(container);
+            if (chart) chart.resize();
+          });
+        }, 400);
+      });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>  
+</body>
 </html>
